# Agent-Room-Convo

./: .gitignore  README.md  Room.md  WORKPLAN.md  pyproject.toml  requirements.txt
configs/questions/: phase1_objective.yaml  phase2_subjective.yaml
configs/rooms/: example_room.yaml
docs/superpowers/specs/: 2026-07-04-shared-harness-design.md
harness/: __init__.py  agent.py  cli.py  config.py  graph.py  runner.py  scheduler.py  storage.py  transcript.py
harness/models/: __init__.py  base.py  claude.py  mock.py
harness/prompts/: room_system_prompt.txt  solo_system_prompt.txt
tests/: test_claude_live.py  test_config.py  test_graph.py  test_models.py  test_scheduler.py  test_transcript.py
