[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-room-convo"
version = "0.1.0"
description = "Multi-agent room harness for studying LLM opinion dynamics"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call the real Claude API (require ANTHROPIC_API_KEY)",
]
